<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/latte_pic"
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:src="@drawable/coffeeanchor"
        android:elevation="50dp"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/businesName"
        />

    <TextView
        android:id="@+id/businesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Misty's Lattes"
        android:padding="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/latte_pic"
        android:layout_centerHorizontal="true"
         />

    <TextView
        android:id="@+id/tagline"
        android:text="@string/busDiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latte_pic"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:padding="2dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"/>


    <TextView
        android:id="@+id/bus_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tagline"
        android:text="@string/businessAddress"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:padding="2dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/city_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bus_address"
        android:text="@string/businesscityzip"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:padding="2dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/bus_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_zip"
        android:text="@string/busHours"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:padding="2dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/bus_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bus_hours"
        android:text="@string/contact"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:padding="2dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"/>


</RelativeLayout>